# sdl-prototype

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  assetsFolder.c  assetsFolder.h  development_diary.md  main.c  shaderTilemap_v1.vert.spv
Source/: main.c  sprites.c  sprites.h
assets/: level.json  level_00.json
assets/animations/: monkey.json
assets/maps/: level_00.json  test.json
assets/shaders/compiled/SPIRV/: shader.frag.spv  shader.vert.spv  shaderDebug.frag.spv  shaderDebug.vert.spv  shaderTexture.frag.spv  shaderTexture.vert.spv  shaderTexture_MVP.frag.spv  shaderTexture_MVP.vert.spv  shaderTexture_MVP_SSB.vert.spv  shaderTilemap.frag.spv  shaderTilemap.vert.spv  shaderTilemap_v1.frag.spv  shaderTilemap_v1.vert.spv
assets/shaders/source/: shader.frag  shader.vert  shaderDebug.frag  shaderDebug.vert  shaderSprite.frag  shaderSprite.vert  shaderTexture.frag  shaderTexture.vert  shaderTexture_MVP.frag  shaderTexture_MVP.vert  shaderTexture_MVP_SSB.vert  shaderTilemap.frag  shaderTilemap.vert  shaderTilemap_v1.frag  shaderTilemap_v1.vert
include/cute_headers/: cute_tiled.h
src/: 2d_engine.h  actor.c  actor.h  common.c  input.h  main.c  scene.c  scene.h  sot_actor.c  sot_actor.h  sot_animation.c  sot_camera.c  sot_collider.c  sot_common.c  sot_gpu_debug_info.c  sot_gpu_pipeline.c  sot_quad.c  sot_scene.c  sot_sprite.c  sot_texture.c  sot_tilemap.c  sprites.c  sprites.h  test_main.c
src/includes/: appstate.h  common.h  sot_actor.h  sot_animation.h  sot_camera.h  sot_collider.h  sot_common.h  sot_engine.h  sot_gpu.h  sot_gpu_debug_info.h  sot_gpu_pipeline.h  sot_math_interop.h  sot_physics.h  sot_quad.h  sot_scene.h  sot_sprite.h  sot_sprites.h  sot_texture.h  sot_tilemap.h  test_main.h
